9 assignment(Relationship)/objects/Pan_Card__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Pan Cards</relationshipLabel>
        <relationshipName>Pan_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expire_Date__c</fullName>
        <label>Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner_Birth_Date__c</fullName>
        <label>Owner Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pan_Number__c</fullName>
        <label>Pan Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Pan Card</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pan Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pan Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>